@@ -4,6 +4,9 @@ Note: This is a more complete ChangeLog than the one in Appendix A of the
 manual, which only contains summaries of changes.
 -----------------------------------------------------------------------------
 
+2011-07-30
+   For release with PHPlot-5.5.0 (no changes)
+
 2011-07-28
    For feature request #3352301 "Bubble plots":
    * Makefile: Add files for new example.
